# graduate-job-hunter-agent

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  app_streamlit.py  pyproject.toml  requirements.txt  run.py
.agents/skills/job_hunter_admin/: SKILL.md
agents/: __init__.py  base.py  cover_letter.py  cv_tailor.py  interview.py  job_search.py  orchestrator.py  tracker.py
mcp_server/: __init__.py  jobs_db.json  server.py
shared/: __init__.py  config.py  llm_client.py  mcp_client.py  models.py  security.py  storage.py
tests/: __init__.py  conftest.py  test_agents.py  test_mcp_capabilities.py  test_orchestrator.py  test_security.py  test_storage.py
