[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graduate-job-hunter-agent"
version = "0.1.0"
description = "A multi-agent orchestrator system to assist graduates in finding and applying for jobs using the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.6.0",
    "google-genai>=0.1.0",
    "litellm>=1.30.0",
    "aiosqlite>=0.20.0",
    "mcp>=1.0.0",
    "fastmcp>=0.4.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
